--- a/static/input.css
+++ b/static/input.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     overflow: hidden;
     height: 100vh;
-    font-family: 'Open Sans', sans-serif;
+    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 .centered {
     display: flex;
