--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,6 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.0.0-beta.1/mapbox-gl.css' rel='stylesheet' />
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <div class="centered">
@@ -45,7 +43,7 @@
                         </svg>
                     </div>
 
-                    <div id="cluster-settings" class="ps-2">
+                    <div id="cluster-settings" class="ps-2 hidden">
                         
                         <label class="flex items-center cursor-pointer">
                             <span class="me-2">Regrouper les HLMs</span>
@@ -163,7 +161,7 @@
                                     </svg>
                                 </div>
                             </div>
-                            <div id="mrc-filter-buttons" class="flex flex-wrap hidden gap-1 mb-2">
+                            <div id="mrc-filter-buttons" class="flex flex-wrap  gap-1 mb-2">
                                 <div class="flex w-full items-end mb-2 gap-6">
                                     <div class="ps-1">   
                                         <div class="relative border-b-[1px] border-gray-400">
@@ -296,7 +294,7 @@
         </div>
         
         <div id='info-overlay' class="overlay"></div>
-
+        <!-- <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script> -->
         <script src="{{ url_for('static', filename='scripts/constants.js') }}"></script>
         <script src="{{ url_for('static', filename='scripts/map.js') }}"
             data-mapbox-token="{{ mapbox_token }}"
