--- a/static/input.css
+++ b/static/input.css
@@ -40,7 +40,7 @@ Set the color of the loader
 
 .overlay {
     z-index: 1000; 
-    background-color: rgba(0,0,0,0.75);
+    background-color: rgba(0,0,0,0.85);
     color: #fff;
     box-shadow: 0 0 10px 2px rgba(0,0,0,.1);
     border-radius: 3px;
@@ -54,7 +54,7 @@ Set the color of the loader
 }
 
 
-#info-overlay {
+#info-overlay, #area-info-overlay {
     display: flex;
     visibility: hidden;
     opacity: 0;
@@ -71,8 +71,6 @@ Set the color of the loader
     overflow-wrap: break-word;
     top: 10px; 
     right: 10px; 
-    /* left: 10px;  */
-    
     padding: 10px;
 
     margin-left: 5px;
@@ -81,53 +79,36 @@ Set the color of the loader
     margin-right: 5px;
 }
 
+
 #info-overlay[data-visible=true] {
     visibility: visible;
     opacity: 1;
 }
-
-/* custom scrollbar in the info overlay */
-#info-overlay::-webkit-scrollbar {
-    width: 17px;
-}
-  
-#info-overlay::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-  
-#info-overlay::-webkit-scrollbar-thumb {
-    background-color: #b5b8b9;
-    border-radius: 20px;
-    border: 6px solid transparent;
-    background-clip: content-box;
-}
-
-#info-overlay::-webkit-scrollbar-thumb:hover {
-    background-color: #6a7173;
+#area-info-overlay[data-visible=true] {
+    visibility: visible;
+    opacity: 1;
 }
 
 
 /* custom scrollbar in the menu overlay */
-#menu-overlay::-webkit-scrollbar {
+.overlay::-webkit-scrollbar {
     width: 17px;
 }
   
-#menu-overlay::-webkit-scrollbar-track {
+.overlay::-webkit-scrollbar-track {
     background-color: transparent;
 }
   
-#menu-overlay::-webkit-scrollbar-thumb {
+.overlay::-webkit-scrollbar-thumb {
     background-color: #b5b8b9;
     border-radius: 20px;
     border: 6px solid transparent;
     background-clip: content-box;
 }
 
-#menu-overlay::-webkit-scrollbar-thumb:hover {
+.overlay::-webkit-scrollbar-thumb:hover {
     background-color: #6a7173;
 }
-
-
 
 
 .select {
@@ -241,7 +222,7 @@ table.dataTable>thead {
 #menu-overlay {
     position: fixed;
     z-index: 1000;
-    background: rgba(0,0,0,0.75);
+    background: rgba(0,0,0,0.85);
     height: 100%;
     width: 30%;
     min-width: 300px;
