--- a/static/styles.css
+++ b/static/styles.css
@@ -814,10 +814,6 @@ select {
   inset-inline-start: 0px !important;
 }
 
-.top-2 {
-  top: 0.5rem !important;
-}
-
 .top-1 {
   top: 0.25rem !important;
 }
@@ -846,10 +842,6 @@ select {
   margin-inline-start: 1rem !important;
 }
 
-.ms-auto {
-  margin-inline-start: auto !important;
-}
-
 .mt-1 {
   margin-top: 0.25rem !important;
 }
@@ -858,12 +850,20 @@ select {
   margin-top: 0.5rem !important;
 }
 
+.mt-3 {
+  margin-top: 0.75rem !important;
+}
+
 .block {
   display: block !important;
 }
 
 .flex {
   display: flex !important;
+}
+
+.table {
+  display: table !important;
 }
 
 .hidden {
@@ -963,8 +963,8 @@ select {
   gap: 1.5rem !important;
 }
 
-.self-center {
-  align-self: center !important;
+.gap-y-2 {
+  row-gap: 0.5rem !important;
 }
 
 .rounded-full {
@@ -1101,6 +1101,11 @@ select {
   line-height: 1.25rem !important;
 }
 
+.text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
+}
+
 .font-semibold {
   font-weight: 600 !important;
 }
@@ -1198,7 +1203,7 @@ Set the color of the loader
 
 .overlay {
   z-index: 1000;
-  background-color: rgba(0,0,0,0.75);
+  background-color: rgba(0,0,0,0.85);
   color: #fff;
   box-shadow: 0 0 10px 2px rgba(0,0,0,.1);
   border-radius: 3px;
@@ -1211,7 +1216,7 @@ Set the color of the loader
   padding: 10px;
 }
 
-#info-overlay {
+#info-overlay, #area-info-overlay {
   display: flex;
   visibility: hidden;
   opacity: 0;
@@ -1227,7 +1232,6 @@ Set the color of the loader
   overflow-wrap: break-word;
   top: 10px;
   right: 10px;
-  /* left: 10px;  */
   padding: 10px;
   margin-left: 5px;
   margin-top: 2px;
@@ -1240,45 +1244,29 @@ Set the color of the loader
   opacity: 1;
 }
 
-/* custom scrollbar in the info overlay */
-
-#info-overlay::-webkit-scrollbar {
-  width: 17px;
-}
-
-#info-overlay::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-#info-overlay::-webkit-scrollbar-thumb {
-  background-color: #b5b8b9;
-  border-radius: 20px;
-  border: 6px solid transparent;
-  background-clip: content-box;
-}
-
-#info-overlay::-webkit-scrollbar-thumb:hover {
-  background-color: #6a7173;
+#area-info-overlay[data-visible=true] {
+  visibility: visible;
+  opacity: 1;
 }
 
 /* custom scrollbar in the menu overlay */
 
-#menu-overlay::-webkit-scrollbar {
+.overlay::-webkit-scrollbar {
   width: 17px;
 }
 
-#menu-overlay::-webkit-scrollbar-track {
+.overlay::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-#menu-overlay::-webkit-scrollbar-thumb {
+.overlay::-webkit-scrollbar-thumb {
   background-color: #b5b8b9;
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
 }
 
-#menu-overlay::-webkit-scrollbar-thumb:hover {
+.overlay::-webkit-scrollbar-thumb:hover {
   background-color: #6a7173;
 }
 
@@ -1396,7 +1384,7 @@ table.dataTable>thead {
 #menu-overlay {
   position: fixed;
   z-index: 1000;
-  background: rgba(0,0,0,0.75);
+  background: rgba(0,0,0,0.85);
   height: 100%;
   width: 30%;
   min-width: 300px;
