--- a/static/styles.css
+++ b/static/styles.css
@@ -818,6 +818,10 @@ select {
   top: 0.25rem !important;
 }
 
+.m-0 {
+  margin: 0px !important;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem !important;
 }
@@ -995,6 +999,11 @@ select {
   border-bottom-width: 1px !important;
 }
 
+.border-blue-500 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity)) !important;
+}
+
 .border-blue-600 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(37 99 235 / var(--tw-border-opacity)) !important;
@@ -1115,6 +1124,11 @@ select {
   color: rgb(191 219 254 / var(--tw-text-opacity)) !important;
 }
 
+.text-blue-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
+}
+
 .text-blue-600 {
   --tw-text-opacity: 1 !important;
   color: rgb(37 99 235 / var(--tw-text-opacity)) !important;
@@ -1230,8 +1244,8 @@ Set the color of the loader
   overflow-y: auto;
   overflow-x: hidden;
   overflow-wrap: break-word;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 5px;
   padding: 10px;
   margin-left: 5px;
   margin-top: 2px;
@@ -1371,14 +1385,6 @@ hr {
 
 table.dataTable>thead {
   padding: 5
-}
-
-.info-overlay-section {
-  margin-top: .5em
-}
-
-.unit-info-subsection-header {
-  font-size: 18px;
 }
 
 #menu-overlay {
