--- a/static/styles.css
+++ b/static/styles.css
@@ -818,6 +818,42 @@ select {
   top: 0.25rem !important;
 }
 
+.right-\[40\%\] {
+  right: 40% !important;
+}
+
+.top-\[10px\] {
+  top: 10px !important;
+}
+
+.right-\[33\%\] {
+  right: 33% !important;
+}
+
+.right-\[25\%\] {
+  right: 25% !important;
+}
+
+.right-\[27\%\] {
+  right: 27% !important;
+}
+
+.right-\[290px\] {
+  right: 290px !important;
+}
+
+.right-\[275px\] {
+  right: 275px !important;
+}
+
+.right-\[270px\] {
+  right: 270px !important;
+}
+
+.right-\[260px\] {
+  right: 260px !important;
+}
+
 .m-0 {
   margin: 0px !important;
 }
@@ -888,6 +924,10 @@ select {
 
 .h-\[40px\] {
   height: 40px !important;
+}
+
+.h-\[36px\] {
+  height: 36px !important;
 }
 
 .w-4 {
@@ -983,6 +1023,14 @@ select {
   border-radius: 0.375rem !important;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem !important;
+}
+
+.rounded-\[4px\] {
+  border-radius: 4px !important;
+}
+
 .border {
   border-width: 1px !important;
 }
@@ -1019,6 +1067,11 @@ select {
   border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
 }
 
+.border-gray-300 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity)) !important;
+}
+
 .border-gray-400 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(156 163 175 / var(--tw-border-opacity)) !important;
@@ -1034,6 +1087,11 @@ select {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-gray-50 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity)) !important;
+}
+
 .bg-gray-500 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity)) !important;
@@ -1041,6 +1099,19 @@ select {
 
 .bg-transparent {
   background-color: transparent !important;
+}
+
+.bg-white {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+}
+
+.p-2 {
+  padding: 0.5rem !important;
+}
+
+.p-2\.5 {
+  padding: 0.625rem !important;
 }
 
 .px-1 {
@@ -1056,6 +1127,26 @@ select {
 .py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
+}
+
+.px-\[3px\] {
+  padding-left: 3px !important;
+  padding-right: 3px !important;
+}
+
+.px-\[10px\] {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+
+.px-\[15px\] {
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+}
+
+.px-\[25px\] {
+  padding-left: 25px !important;
+  padding-right: 25px !important;
 }
 
 .pb-2 {
@@ -1084,6 +1175,10 @@ select {
 
 .pt-\[70px\] {
   padding-top: 70px !important;
+}
+
+.pt-\[5px\] {
+  padding-top: 5px !important;
 }
 
 .text-center {
@@ -1115,8 +1210,20 @@ select {
   line-height: 1.75rem !important;
 }
 
+.text-\[15px\] {
+  font-size: 15px !important;
+}
+
+.font-medium {
+  font-weight: 500 !important;
+}
+
 .font-semibold {
   font-weight: 600 !important;
+}
+
+.leading-\[20px\] {
+  line-height: 20px !important;
 }
 
 .text-blue-200 {
@@ -1149,6 +1256,49 @@ select {
   color: rgb(156 163 175 / var(--tw-text-opacity)) !important;
 }
 
+.text-gray-900 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(17 24 39 / var(--tw-text-opacity)) !important;
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(107 114 128 / var(--tw-text-opacity)) !important;
+}
+
+.text-\[\#757575\] {
+  --tw-text-opacity: 1 !important;
+  color: rgb(117 117 117 / var(--tw-text-opacity)) !important;
+}
+
+.text-\[\#666666\] {
+  --tw-text-opacity: 1 !important;
+  color: rgb(102 102 102 / var(--tw-text-opacity)) !important;
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05) !important;
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.shadow-\[0_0px_10px_-2px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
+  --tw-shadow: 0 0px 10px -2px rgba(0,0,0,0.1) !important;
+  --tw-shadow-colored: 0 0px 10px -2px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
+.shadow-\[0_0_10px_2px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
+  --tw-shadow: 0 0 10px 2px rgba(0,0,0,0.1) !important;
+  --tw-shadow-colored: 0 0 10px 2px var(--tw-shadow-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
+}
+
 .outline {
   outline-style: solid !important;
 }
@@ -1160,6 +1310,14 @@ select {
 
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow) !important;
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter !important;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter !important;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter !important;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
+  transition-duration: 150ms !important;
 }
 
 .transition-colors {
@@ -1559,6 +1717,11 @@ table.dataTable>thead {
   color: rgb(96 165 250 / var(--tw-text-opacity)) !important;
 }
 
+.focus\:border-blue-500:focus {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity)) !important;
+}
+
 .focus\:text-gray-50:focus {
   --tw-text-opacity: 1 !important;
   color: rgb(249 250 251 / var(--tw-text-opacity)) !important;
@@ -1579,6 +1742,11 @@ table.dataTable>thead {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+}
+
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1 !important;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity)) !important;
 }
 
 .focus\:ring-blue-600:focus {
@@ -1746,5 +1914,42 @@ table.dataTable>thead {
 .peer:disabled ~ .peer-disabled\:text-gray-400 {
   --tw-text-opacity: 1 !important;
   color: rgb(156 163 175 / var(--tw-text-opacity)) !important;
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark\:border-gray-600 {
+    --tw-border-opacity: 1 !important;
+    border-color: rgb(75 85 99 / var(--tw-border-opacity)) !important;
+  }
+
+  .dark\:bg-gray-700 {
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity)) !important;
+  }
+
+  .dark\:text-white {
+    --tw-text-opacity: 1 !important;
+    color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+  }
+
+  .dark\:placeholder-gray-400::-moz-placeholder {
+    --tw-placeholder-opacity: 1 !important;
+    color: rgb(156 163 175 / var(--tw-placeholder-opacity)) !important;
+  }
+
+  .dark\:placeholder-gray-400::placeholder {
+    --tw-placeholder-opacity: 1 !important;
+    color: rgb(156 163 175 / var(--tw-placeholder-opacity)) !important;
+  }
+
+  .dark\:focus\:border-blue-500:focus {
+    --tw-border-opacity: 1 !important;
+    border-color: rgb(59 130 246 / var(--tw-border-opacity)) !important;
+  }
+
+  .dark\:focus\:ring-blue-500:focus {
+    --tw-ring-opacity: 1 !important;
+    --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity)) !important;
+  }
 }
   
